update missing code